@@ -1,5 +1,6 @@
 #include "TrigT1CaloMonitoring/TrigT1CaloCpmMonTool.h"
 #include "TrigT1CaloMonitoring/TrigT1CaloRodMonTool.h"
+#include "TrigT1CaloMonitoring/TrigT1CaloGlobalMonTool.h"
 #include "TrigT1CaloMonitoring/TrigT1CaloMonErrorTool.h"
 #include "TrigT1CaloMonitoring/CPMSimBSMon.h"
 #include "TrigT1CaloMonitoring/JEPSimBSMon.h"
@@ -13,6 +14,7 @@
 
 DECLARE_TOOL_FACTORY(TrigT1CaloCpmMonTool )
 DECLARE_TOOL_FACTORY(TrigT1CaloRodMonTool )
+DECLARE_TOOL_FACTORY(TrigT1CaloGlobalMonTool )
 DECLARE_TOOL_FACTORY(TrigT1CaloMonErrorTool )
 DECLARE_TOOL_FACTORY(CPMSimBSMon)
 DECLARE_TOOL_FACTORY(JEPSimBSMon)
@@ -24,6 +26,7 @@ DECLARE_TOOL_FACTORY(PPrPerfMon)
 DECLARE_FACTORY_ENTRIES(TrigT1CaloMonitoring) {
   DECLARE_ALGTOOL(TrigT1CaloCpmMonTool );
   DECLARE_ALGTOOL(TrigT1CaloRodMonTool );
+  DECLARE_ALGTOOL(TrigT1CaloGlobalMonTool );
   DECLARE_ALGTOOL(TrigT1CaloMonErrorTool );
   DECLARE_ALGTOOL(CPMSimBSMon);
   DECLARE_ALGTOOL(JEPSimBSMon);
